--- a/app/src/main/res/drawable/button.xml
+++ b/app/src/main/res/drawable/button.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-<item android:state_pressed="false" android:drawable="@drawable/big_red_button"></item>
+<item android:state_pressed="false" android:drawable="@drawable/button_blank_blue"></item>
 
     <item android:state_pressed="true">
         <shape>
-        <solid android:color="#cff694"></solid>
-        <corners android:radius="20dp"></corners>
+        <solid android:color="#cfd6f4"></solid>
+        <corners android:radius="50dp"></corners>
         </shape>
         </item>
 </selector>
