--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,12 +35,13 @@
         android:id="@+id/editText"
         android:layout_below="@+id/textview"
         android:layout_alignParentRight="false"
-        android:layout_alignParentEnd="false" />
+        android:layout_alignParentEnd="false"
+        android:layout_toRightOf="@+id/name" />
 
     <RadioGroup
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/editText"
+        android:layout_below="@+id/name"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:id="@+id/radioGroup"
@@ -51,14 +52,16 @@
             android:layout_height="wrap_content"
             android:text="Male"
             android:id="@+id/MaleRadioButton"
-            android:checked="false" />
+            android:checked="false"
+            android:drawableRight="@drawable/male" />
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Female"
             android:id="@+id/FemaleRadioButton"
-            android:checked="true" />
+            android:checked="true"
+            android:drawableRight="@drawable/female" />
     </RadioGroup>
 
     <CheckBox
@@ -70,5 +73,16 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:checked="false" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Name: "
+        android:id="@+id/name"
+        android:layout_below="@+id/textview"
+        android:textColor="#4857df"
+        android:textSize="30dp"
+        android:layout_alignRight="@+id/checkBox"
+        android:layout_alignEnd="@+id/checkBox" />
 
 </RelativeLayout>
