add holder and spinner

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,12 +36,12 @@
         android:layout_below="@+id/textview"
         android:layout_alignParentRight="false"
         android:layout_alignParentEnd="false"
-        android:layout_toRightOf="@+id/name" />
+        android:layout_toRightOf="@+id/note" />
 
     <RadioGroup
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/name"
+        android:layout_below="@+id/note"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:id="@+id/radioGroup"
@@ -67,7 +67,7 @@
         android:layout_height="wrap_content"
         android:text="Hide Gender"
         android:id="@+id/checkBox"
-        android:layout_below="@+id/radioGroup"
+        android:layout_below="@+id/spinner"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:checked="false"
@@ -77,8 +77,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Name: "
-        android:id="@+id/name"
+        android:text="Note: "
+        android:id="@+id/note"
         android:layout_below="@+id/textview"
         android:textColor="#4857df"
         android:textSize="30dp"
@@ -93,5 +93,13 @@
         android:layout_toStartOf="@+id/editText"
         android:layout_alignRight="@+id/radioGroup"
         android:layout_alignEnd="@+id/radioGroup" />
+
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/spinner"
+        android:layout_below="@+id/radioGroup"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
