--- a/app/src/main/res/layout/activity_drink_menu.xml
+++ b/app/src/main/res/layout/activity_drink_menu.xml
@@ -46,5 +46,17 @@
         android:id="@+id/okButton"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:onClick="done" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="cancel"
+        android:id="@+id/cancelButton"
+        android:layout_alignBottom="@+id/okButton"
+        android:layout_toLeftOf="@+id/okButton"
+        android:layout_toStartOf="@+id/okButton"
+        android:layout_alignParentStart="false"
+        android:onClick="cancel" />
 </RelativeLayout>
