--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
-        android:id="@+id/textview"
+        android:id="@+id/textView"
         android:textSize="30dp" />
 
     <Button
@@ -31,7 +31,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/editText"
-        android:layout_below="@+id/textview"
+        android:layout_below="@+id/textView"
         android:layout_alignParentRight="false"
         android:layout_alignParentEnd="false"
         android:layout_toRightOf="@+id/note" />
@@ -77,7 +77,7 @@
         android:layout_height="wrap_content"
         android:text="Note: "
         android:id="@+id/note"
-        android:layout_below="@+id/textview"
+        android:layout_below="@+id/textView"
         android:textColor="#4857df"
         android:textSize="30dp"
         android:layout_alignRight="@+id/checkBox"
