--- a/app/src/main/res/layout/fragment_drink_order_dialog.xml
+++ b/app/src/main/res/layout/fragment_drink_order_dialog.xml
@@ -136,7 +136,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="備註"
-        android:id="@+id/noteTextView"
+        android:id="@+id/storeInfoTextView"
         android:layout_below="@+id/sugarRadioGroup"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -147,6 +147,6 @@
         android:id="@+id/noteEditText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/noteTextView" />
+        android:layout_below="@+id/storeInfoTextView" />
 
 </RelativeLayout>
