--- a/app/src/main/res/layout/listview_dink_item.xml
+++ b/app/src/main/res/layout/listview_dink_item.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="DrinkName"
-        android:id="@+id/drinkNameTextView"
+        android:id="@+id/noteTextView"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/drinkImageView"
         android:layout_toEndOf="@+id/drinkImageView" />
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:text="M:"
         android:id="@+id/mTextView"
-        android:layout_below="@+id/drinkNameTextView"
+        android:layout_below="@+id/noteTextView"
         android:layout_toRightOf="@+id/drinkImageView"
         android:layout_toEndOf="@+id/drinkImageView" />
 
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:text="35"
         android:id="@+id/mPriceTextView"
-        android:layout_below="@+id/drinkNameTextView"
+        android:layout_below="@+id/noteTextView"
         android:layout_toRightOf="@+id/mTextView"
         android:layout_toEndOf="@+id/mTextView"
         android:layout_marginLeft="10dp"
@@ -46,7 +46,7 @@
         android:layout_height="wrap_content"
         android:text="L:"
         android:id="@+id/lTextView"
-        android:layout_below="@+id/drinkNameTextView"
+        android:layout_below="@+id/noteTextView"
         android:layout_toRightOf="@+id/mPriceTextView"
         android:layout_toEndOf="@+id/mPriceTextView"
         android:layout_marginLeft="10dp" />
@@ -57,7 +57,7 @@
         android:text="45"
         android:id="@+id/lPriceTextView"
         android:layout_marginLeft="10dp"
-        android:layout_below="@+id/drinkNameTextView"
+        android:layout_below="@+id/noteTextView"
         android:layout_toRightOf="@+id/lTextView"
         android:layout_toEndOf="@+id/lTextView"
         android:layout_marginStart="10dp" />
