--- a/app/src/main/res/layout/listview_order_item.xml
+++ b/app/src/main/res/layout/listview_order_item.xml
@@ -6,8 +6,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Black Tea"
-        android:id="@+id/drinkNameTextView"
+        android:text="note"
+        android:id="@+id/noteTextView"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -15,19 +15,17 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="note"
-        android:id="@+id/noteTextView"
-        android:layout_below="@+id/drinkNameTextView"
-        android:layout_alignRight="@+id/drinkNameTextView"
-        android:layout_alignEnd="@+id/drinkNameTextView" />
+        android:id="@+id/storeInfoTextView"
+        android:layout_below="@+id/noteTextView"
+        android:text="storeInfo" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Store"
-        android:id="@+id/storeTextView"
-        android:layout_above="@+id/noteTextView"
+        android:text="Number"
+        android:id="@+id/drindNumberTextView"
+        android:layout_above="@+id/storeInfoTextView"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 </RelativeLayout>
